--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: slider_x
 description: "A customizable Flutter slider with a draggable handle and segmented color indicators for intuitive range selection."
-version: 0.0.2
+version: 0.0.2+1
 homepage: https://github.com/meetleev
 repository: https://github.com/meetleev/flutter_slider_x
 topics:
